--- a/ucf_sub_stm32/Hippocampus_ESC_commander/Hippocampus_ESC_commander.ioc
+++ b/ucf_sub_stm32/Hippocampus_ESC_commander/Hippocampus_ESC_commander.ioc
@@ -23,15 +23,17 @@ Dma.USART1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphData
 File.Version=6
 KeepUserPlacement=true
 Mcu.Family=STM32L4
-Mcu.IP0=DMA
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IP4=TIM1
-Mcu.IP5=TIM2
-Mcu.IP6=USART1
-Mcu.IP7=USART2
-Mcu.IPNb=8
+Mcu.IP0=CRC
+Mcu.IP1=DMA
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SYS
+Mcu.IP5=TIM1
+Mcu.IP6=TIM2
+Mcu.IP7=TIM6
+Mcu.IP8=USART1
+Mcu.IP9=USART2
+Mcu.IPNb=10
 Mcu.Name=STM32L432K(B-C)Ux
 Mcu.Package=UFQFPN32
 Mcu.Pin0=PC14-OSC32_IN (PC14)
@@ -45,10 +47,12 @@ Mcu.Pin15=PB4 (NJTRST)
 Mcu.Pin16=PB5
 Mcu.Pin17=PB6
 Mcu.Pin18=PB7
-Mcu.Pin19=VP_SYS_VS_Systick
+Mcu.Pin19=VP_CRC_VS_CRC
 Mcu.Pin2=PA0
-Mcu.Pin20=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin21=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin20=VP_SYS_VS_Systick
+Mcu.Pin21=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin22=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin23=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin3=PA2
 Mcu.Pin4=PB0
 Mcu.Pin5=PB1
@@ -56,7 +60,7 @@ Mcu.Pin6=PA8
 Mcu.Pin7=PA9
 Mcu.Pin8=PA10
 Mcu.Pin9=PA11
-Mcu.PinsNb=22
+Mcu.PinsNb=24
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L432KCUx
@@ -74,8 +78,11 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true
+NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:false\:false
+PA0.GPIOParameters=GPIO_Speed
+PA0.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PA0.Signal=S_TIM2_CH1
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
@@ -103,6 +110,8 @@ PA2.GPIO_Label=VCP_TX
 PA2.Locked=true
 PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
+PA8.GPIOParameters=GPIO_Speed
+PA8.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA8.Signal=S_TIM1_CH1
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
@@ -160,7 +169,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_CRC_Init-CRC-false-HAL-true,9-MX_TIM6_Init-TIM6-false-HAL-true
 RCC.48CLKFreq_Value=24000000
 RCC.ADCCLockSelection=RCC_ADCCLKSOURCE_SYSCLK
 RCC.ADCFreq_Value=80000000
@@ -237,8 +246,11 @@ TIM1.IPParameters=Period,Channel-PWM Generation1 CH1
 TIM1.Period=133
 TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM2.IPParameters=Period,Channel-PWM Generation1 CH1,Pulse-PWM Generation1 CH1
-TIM2.Period=1333333
+TIM2.Period=166666
 TIM2.Pulse-PWM\ Generation1\ CH1=80000
+TIM6.IPParameters=Prescaler,Period
+TIM6.Period=999
+TIM6.Prescaler=79
 USART1.IPParameters=VirtualMode-Asynchronous,WordLength,Mode
 USART1.Mode=MODE_RX
 USART1.VirtualMode-Asynchronous=VM_ASYNC
@@ -246,11 +258,15 @@ USART1.WordLength=WORDLENGTH_8B
 USART2.IPParameters=VirtualMode-Asynchronous,WordLength
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 USART2.WordLength=WORDLENGTH_8B
+VP_CRC_VS_CRC.Mode=CRC_Activate
+VP_CRC_VS_CRC.Signal=CRC_VS_CRC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
 board=NUCLEO-L432KC
 boardIOC=true
