--- a/ucf_sub_stm32/Hippocampus_ESC_commander/Hippocampus_ESC_commander.ioc
+++ b/ucf_sub_stm32/Hippocampus_ESC_commander/Hippocampus_ESC_commander.ioc
@@ -1,39 +1,40 @@
 #MicroXplorer Configuration settings - do not modify
-Dma.Request0=USART1_RX
-Dma.Request1=TIM1_CH1
+Dma.Request0=TIM1_CH1
+Dma.Request1=USART1_RX
 Dma.RequestsNb=2
-Dma.TIM1_CH1.1.Direction=DMA_MEMORY_TO_PERIPH
-Dma.TIM1_CH1.1.Instance=DMA1_Channel2
-Dma.TIM1_CH1.1.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.TIM1_CH1.1.MemInc=DMA_MINC_ENABLE
-Dma.TIM1_CH1.1.Mode=DMA_NORMAL
-Dma.TIM1_CH1.1.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
-Dma.TIM1_CH1.1.PeriphInc=DMA_PINC_DISABLE
-Dma.TIM1_CH1.1.Priority=DMA_PRIORITY_LOW
-Dma.TIM1_CH1.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.USART1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.USART1_RX.0.Instance=DMA2_Channel7
-Dma.USART1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART1_RX.0.MemInc=DMA_MINC_ENABLE
-Dma.USART1_RX.0.Mode=DMA_NORMAL
-Dma.USART1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART1_RX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.USART1_RX.0.Priority=DMA_PRIORITY_LOW
-Dma.USART1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.TIM1_CH1.0.Direction=DMA_MEMORY_TO_PERIPH
+Dma.TIM1_CH1.0.Instance=DMA1_Channel2
+Dma.TIM1_CH1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.TIM1_CH1.0.MemInc=DMA_MINC_ENABLE
+Dma.TIM1_CH1.0.Mode=DMA_NORMAL
+Dma.TIM1_CH1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.TIM1_CH1.0.PeriphInc=DMA_PINC_DISABLE
+Dma.TIM1_CH1.0.Priority=DMA_PRIORITY_LOW
+Dma.TIM1_CH1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.USART1_RX.1.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART1_RX.1.Instance=DMA2_Channel7
+Dma.USART1_RX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART1_RX.1.MemInc=DMA_MINC_ENABLE
+Dma.USART1_RX.1.Mode=DMA_NORMAL
+Dma.USART1_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART1_RX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.USART1_RX.1.Priority=DMA_PRIORITY_LOW
+Dma.USART1_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 File.Version=6
 KeepUserPlacement=true
 Mcu.Family=STM32L4
 Mcu.IP0=CRC
 Mcu.IP1=DMA
+Mcu.IP10=USART2
 Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=SYS
 Mcu.IP5=TIM1
 Mcu.IP6=TIM2
 Mcu.IP7=TIM6
-Mcu.IP8=USART1
-Mcu.IP9=USART2
-Mcu.IPNb=10
+Mcu.IP8=TIM7
+Mcu.IP9=USART1
+Mcu.IPNb=11
 Mcu.Name=STM32L432K(B-C)Ux
 Mcu.Package=UFQFPN32
 Mcu.Pin0=PC14-OSC32_IN (PC14)
@@ -53,6 +54,7 @@ Mcu.Pin20=VP_SYS_VS_Systick
 Mcu.Pin21=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin22=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin23=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin24=VP_TIM7_VS_ClockSourceINT
 Mcu.Pin3=PA2
 Mcu.Pin4=PB0
 Mcu.Pin5=PB1
@@ -60,7 +62,7 @@ Mcu.Pin6=PA8
 Mcu.Pin7=PA9
 Mcu.Pin8=PA10
 Mcu.Pin9=PA11
-Mcu.PinsNb=24
+Mcu.PinsNb=25
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L432KCUx
@@ -79,6 +81,7 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:true
+NVIC.TIM7_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:false\:false
 PA0.GPIOParameters=GPIO_Speed
@@ -111,7 +114,7 @@ PA2.Locked=true
 PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA8.GPIOParameters=GPIO_Speed
-PA8.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PA8.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PA8.Signal=S_TIM1_CH1
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
@@ -169,7 +172,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_CRC_Init-CRC-false-HAL-true,9-MX_TIM6_Init-TIM6-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_CRC_Init-CRC-false-HAL-true,9-MX_TIM6_Init-TIM6-false-HAL-true,10-MX_TIM7_Init-TIM7-false-HAL-true
 RCC.48CLKFreq_Value=24000000
 RCC.ADCCLockSelection=RCC_ADCCLKSOURCE_SYSCLK
 RCC.ADCFreq_Value=80000000
@@ -251,11 +254,15 @@ TIM2.Pulse-PWM\ Generation1\ CH1=80000
 TIM6.IPParameters=Prescaler,Period
 TIM6.Period=999
 TIM6.Prescaler=79
+TIM7.IPParameters=Prescaler,Period
+TIM7.Period=16700
+TIM7.Prescaler=79
 USART1.IPParameters=VirtualMode-Asynchronous,WordLength,Mode
 USART1.Mode=MODE_RX
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 USART1.WordLength=WORDLENGTH_8B
-USART2.IPParameters=VirtualMode-Asynchronous,WordLength
+USART2.BaudRate=1000000
+USART2.IPParameters=VirtualMode-Asynchronous,WordLength,BaudRate
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 USART2.WordLength=WORDLENGTH_8B
 VP_CRC_VS_CRC.Mode=CRC_Activate
@@ -268,5 +275,7 @@ VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
+VP_TIM7_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM7_VS_ClockSourceINT.Signal=TIM7_VS_ClockSourceINT
 board=NUCLEO-L432KC
 boardIOC=true
