--- a/ucf_sub_stm32/Hippocampus_ESC_commander/Hippocampus_ESC_commander.ioc
+++ b/ucf_sub_stm32/Hippocampus_ESC_commander/Hippocampus_ESC_commander.ioc
@@ -69,7 +69,7 @@ Mcu.UserName=STM32L432KCUx
 MxCube.Version=4.25.1
 MxDb.Version=DB.4.0.251
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:false\:false
-NVIC.DMA1_Channel2_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.DMA1_Channel2_IRQn=true\:1\:0\:true\:false\:true\:false
 NVIC.DMA2_Channel7_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:false\:false
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:false\:false
@@ -79,9 +79,9 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true
-NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true
-NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:true
-NVIC.TIM7_IRQn=true\:0\:0\:false\:false\:true\:true
+NVIC.TIM2_IRQn=true\:1\:0\:true\:false\:true\:true
+NVIC.TIM6_DAC_IRQn=true\:2\:0\:true\:false\:true\:true
+NVIC.TIM7_IRQn=true\:2\:0\:true\:false\:true\:true
 NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:false\:false
 PA0.GPIOParameters=GPIO_Speed
